Doc g264-ETAT : etat complet du chantier portage natif particules + reprise (handoff)
Etat consolide pour reprise seamless : format certifie 535/535 + parseur C + RNG bit-exacte (seed=1,
*16807) + np_sim.c (port ParticleEmitter multi-emetteur) dont les COMPTES de particules sont certifies
exacts vs oracle sur 30 frames. Harnais np_certify operationnel (golden vs sim, diff sommet localise).
Documente les commandes exactes, le mapping des champs (velocity=0x110 confirme, autres hypotheses), et
ce qui reste (positions/couleurs/uv guides par np_certify, puis goldenall 535 + cablage). Rappel regles
PRINCIPLES 1-8.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01VxHVce2pXBw4CVoLcnjLPW